--- a/src/components/Menu/menu.css
+++ b/src/components/Menu/menu.css
@@ -1,10 +1,19 @@
-.menu-wrapper{
-    border-bottom: 1px solid var(--menu-text-hover-color);
-}
+
 
 .menu {
-    margin:0;
+    margin:37px;
+    margin-top: 23px;
     list-style: none;
     display: flex;
     padding: 0;
+    flex-direction: row-reverse;
+}
+
+
+@media  (min-width: 320px) and (max-width: 767px){
+    .menu{
+        font-size: 15px;
+        flex-direction: column;
+        align-items: center;
+    }
 }
