--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,8 @@
+body {
+  background-color: #000;
+
+}
+
 :root {
   font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
   color: rgba(255, 255, 255, 0.87);
